[package]
name = "triple"
description = "embeddable/standalone rdf triple store"
version = "0.0.2"
authors = ["Tyler Neely <t@jujit.su>"]
license = "Apache-2.0"
homepage = "https://github.com/spacejam/triple"
keywords = ["database", "SPARQL", "rdf", "triple", "triplestore"]

[dependencies]
nom = "1.2"
quickcheck = "0.3"
log = "0.3"
clippy = "0.0.96"
